--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   firebase_storage: ^11.2.1
   provider: ^6.0.5
   table_calendar: ^3.0.9
+  mockito: ^5.4.1
   
 
 dev_dependencies:
