--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,9 @@ dependencies:
   firebase_storage: ^11.2.1
   provider: ^6.0.5
   table_calendar: ^3.0.9
-  mockito: ^5.4.1
+  image_cropper: ^4.0.1
+  lottie: ^2.3.2
+  #firebase_crashlytics: ^2.0.0
   
 
 dev_dependencies:
