--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,9 +43,10 @@ dependencies:
   image_picker: ^0.8.7+5
   firebase_storage: ^11.2.1
   provider: ^6.0.5
-  table_calendar: ^3.0.9
   image_cropper: ^4.0.1
-  lottie: ^2.3.2
+  font_awesome_flutter: ^10.4.0
+  intl: ^0.17.0
+  lottie: ^2.4.0
   #firebase_crashlytics: ^2.0.0
   
 
