--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   font_awesome_flutter: ^10.4.0
   intl: ^0.17.0
   lottie: ^2.4.0
+  dropdown_search: ^1.0.0
   #firebase_crashlytics: ^2.0.0
   
 
