--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   lottie: ^2.4.0
   dropdown_search: ^1.0.0
   uuid: ^3.0.7
+  sign_in_with_apple: ^5.0.0
   #firebase_crashlytics: ^2.0.0
   
 
